--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo": "~45.0.0",
     "expo-font": "~10.1.0",
     "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.2",
     "firebase": "9.6.11",
     "lottie-react-native": "5.0.1",
     "react": "17.0.2",
